Doplnený odkaz na GitHub

--- a/index.html
+++ b/index.html
@@ -126,5 +126,8 @@
 
 		<h2>Zdroj obrázkov</h2>
 		<p><a href="https://pixabay.com/sk/viac-pes-%C3%BAsmev-cute-psi-425067/">havko</a>, <a href="https://commons.wikimedia.org/wiki/File:Male_and_Female_mallard_ducks.jpg">kačka</a>, <a href="https://en.wikipedia.org/wiki/Rooster#/media/File:Fighting_cock_Philippines.jpg">kohút</a>, <a href="https://en.wikipedia.org/wiki/Nokota_horse#/media/File:Nokota_Horse_Stud_Band.jpg">koník</a>, <a href="https://commons.wikimedia.org/wiki/File:Grenadine_Goat_and_Kids.jpg">kozička</a>, <a href="https://www.flickr.com/photos/treehouse1977/2401578132">kravička</a>, <a href="https://en.wikipedia.org/wiki/Cat#/media/File:Cat_eating_a_rabbit.jpeg">mačka</a>, <a href="https://www.flickr.com/photos/karilop/10788798274">medveď</a>, <a href="https://commons.wikimedia.org/wiki/File:Telascica-Donkey.JPG">oslík</a>, <a href="https://pixabay.com/sk/st%C3%A1do-oviec-ovce-st%C3%A1do-49667/">ovečka</a>, <a href="http://www.freestockphotos.biz/stockphoto/10094">prasiatko</a>, <a href="https://commons.wikimedia.org/wiki/File:Buff_Orpington_chicken,_UK.jpg">sliepočka</a></p>
+		
+		<h2>GitHub</h2>
+		<p>Všetky zvuky (mp3), obrázky (jpg) a zhrňujúci súbor (index.html) stiahnete na adrese <a href="https://github.com/tiborepcek/zverinec">github.com/tiborepcek/zverinec</a>.</p>
 	</body>
 </html>
